116. Change 107 introduced a cut/paste error that prevented the
     background color on Windows systems from being properly parsed.
     (Reported by Frank and Manfred from jed-users).
117. src/sldisply.c: SLSMG_COLOR_BRIGHT_MAGENTA and
     SLSMG_COLOR_BRIGHT_CYAN were swapped (patch provided by Thorben
     from slang-users list).
118. Updated copyright year for upcoming release.

{{{ Previous Versions

Changes since 2.2.3
1. src/slpack.c: Typo affecting 64 bit integers ('q' & 'Q') (Paul
   Boekholt).
2. src/Makefile.in: Make libslang.so a symlink to libslang.so.2
   instead of libslang.so.2.2.4 (Miroslav Lichvar)
3. modules/Makefile.in: Cygwin needs ELFDIR defined (Marco Atzeri).
4. src/slutty.c: Added additional baud rate values (Sergey Vlasov)
5. autoconf/configure.ac: Check for socket and socketpair in -lsocket
   if it is not in libc.
6. *.tm, src/slstrops.c, src/slbstr.c: Changed occurances to
   occurrences (Marcel Telka).
7. src/slparse.c: Increment the _boseos_info value for qualifier
   expressions.
8. src/sltoken.c,slparse.c: The semantics of the _boseos_info variable
   changed such that bos/eos callbacks are not generated for
   preprocessor #ifeval statements unless bit 0x100 is set.
9. slsh/scripts/slstkchk: a new script used for running the
   stack-check debugger.
10. documentation updates/tweaks (Manfred Hanke).
11. slsh/lib/rline/histsrch.sl: When building history search
    completions, use most recent history first.
12. src/slarray.c: Detect integer overflows for multi-dimensional
    arrays.
13. Updated year from 2010 to 2011
14. src/slcommon.c: Added _slcalloc, _slrecalloc memory allocation
    functions that check for unsigned integer wrapping.  A number of
    vulnerable calls to SLmalloc were modified to use these functions.
    (Fixes an issue reported by Pablo Cassatella).
15. src/slarray.c: Detect attempts to create a 0 dimensional array.
16. modules/csv.sl: Float and double NaNs were reversed.  When